# code_agent

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/application/dtos/: user_dto.py
src/application/use_cases/: user_use_cases.py
src/domain/: exceptions.py
src/domain/entities/: user.py
src/domain/repositories/: user_repository.py
src/infrastructure/config/: settings.py
src/infrastructure/firebase/: config.py
src/infrastructure/firebase/repositories/: firebase_user_repository.py
src/interface/: main.py
src/interface/api/dependencies/: user_dependencies.py
src/interface/api/routers/: user_router.py
src/interface/api/schemas/: user_schema.py
tests/unit/: test_user_use_cases.py
